--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "stancl/tenancy",
+    "name": "lianglong/hyperf-tenancy",
     "type": "library",
     "license": "MIT",
     "keywords": [
